--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-    <!--<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>-->
     <script src="//cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js"></script>
 </head>
 <script src="vertx-eventbus.js"></script>
@@ -23,9 +22,11 @@
         eb.registerHandler("eventsIn", function (err, res) {
             console.log(res.body)
         });
+    };
 
+    setInterval(function () {
         eb.publish("eventsIn", {name:"hahahaha"});
-    }
+    }, 2000);
 </script>
 
 
